# OscilloscopePlayerRU

./: CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.ui
